# OS_labs

./: README.md  log.txt
6842-lab2/: Makefile  README.md  backup-cron.sh  backupd.sh
6842-lab3/lab3-src/: command.cc  command.h  lex.yy.c  shell  shell.l  shell.y  testOut.txt  y.tab.c  y.tab.h
6842-lab3/lab3-src (1)/: command.h  shell  shell.y  y.tab.c  y.tab.h
6842-lab3/project3/: a.out  f1.txt  f2.txt  log.txt  system.cc
6842-lab3/test/: a.out  command  f1.txt  f2.txt  f3.txt  main.cc  shell.y  test  test.c  (+6 more)
6842-lab3/test/project3/: CMakeLists.txt  a.out  f1.txt  f2.txt  f3.txt  log.txt  main.cc  system.cc  system.h  system.hpp  test.cc  utilities.cc  utilities.h  utilities.hpp
6842-lab4/: CMakeLists.txt  a.out  fcfs  fcfs.cc  hello.cc  main.cc  process.cc  process.hpp  scheduler  scheduler.cc  test  test.cc  testfile  tokenizer.cc  tokenizer.hpp  utilities.hpp
6842-lab4/6842-7194-lab4/: lab4  tokenizer.hpp
6842-lab4/6842-7194-lab4 (1)/: Makefile  backup.cc  process.cc  tokenizer.cc
6842-lab4/6842-lab4/: a.out  lab4  main.cc  process.cc
6842-lab4/build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake
6842-lab4/lab4-initial-testcases/: 02a-input.txt  04b-input.txt  05a-input.txt
6842-lab4/project4/: a.out  backup.cc  main.cc  process.cc  process.hpp  project4  tokenizer.hpp
6842-lab4/project4/lab4-initial-testcases-v7/: 07a-input.txt  07a-output.txt  07b-input.txt  08a-input.txt
6842-lab5/: a.out  f.txt  file.cc  ftest  main  main.cpp  producer_consumer.cc  semaphore_system_v.cc  sharedMem.c  test  test.cc
lab1/: Makefile  script.sh
(+122 files in other folders)
